# covid-berlin-scraper

./: MANIFEST.in  Makefile  NOTICE  Pipfile  README.md  config.sample.json  coronavirus-berlin-scraper  covid-berlin-scraper  pyproject.toml  setup.cfg  setup.py  tox.ini
coronavirus_berlin_scraper/: __init__.py  __main__.py  coronavirus_berlin_scraper.py  download_archives.py  download_feed.py  model.py  parse_press_releases.py
coronavirus_berlin_scraper/utils/: http_utils.py  parse_utils.py
covid_berlin_scraper/: __init__.py  __main__.py  cli.py  compress_dashboards.py  config.sample.json  download_archives.py  download_dashboard.py  download_district_table.py  download_feed.py  model.py  parse_press_releases.py
covid_berlin_scraper/tests/: test_download_dashboard.py  test_model.py  test_parse_press_releases.py
covid_berlin_scraper/utils/: http_utils.py  parse_utils.py
